Actions
Bug #12617
closedpcie: NULL pointer errors
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
Build errors on SPARC with NULL pointers:
cc1: warnings being treated as errors ../../sparc/io/pciex/pcie_sparc.c: In function 'pcie_plat_pwr_setup': ../../sparc/io/pciex/pcie_sparc.c:70: error: passing argument 6 of 'ddi_prop_create' makes integer from pointer without a cast ../../common/sys/sunddi.h:944: note: expected 'int' but argument is of type 'void *'
Updated by Electric Monk about 2 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 7e7bf7f54a5544e467fcb1eaf3f5f47129d83d70
commit 7e7bf7f54a5544e467fcb1eaf3f5f47129d83d70 Author: Toomas Soome <tsoome@me.com> Date: 2020-05-10T07:57:13.000Z 12617 pcie: NULL pointer errors Reviewed by: Gergő Doma <domag02@gmail.com> Reviewed by: C Fraire <cfraire@me.com> Reviewed by: Patrick Mooney <pmooney@pfmooney.com> Approved by: Gordon Ross <gordon.w.ross@gmail.com>
Actions