usr/src/uts/sparc/io/pciex/pcie_sparc.c
@@ -67,7 +67,7 @@ int
 pcie_plat_pwr_setup(dev_info_t *dip)
 {
 	if (ddi_prop_create(DDI_DEV_T_NONE, dip, DDI_PROP_CANSLEEP,
-	    "pm-want-child-notification?", NULL, NULL) != DDI_PROP_SUCCESS) {
+	    "pm-want-child-notification?", NULL, 0) != DDI_PROP_SUCCESS) {
 		PCIE_DBG("%s(%d): can't create pm-want-child-notification \n",
 		    ddi_driver_name(dip), ddi_get_instance(dip));
 		return (DDI_FAILURE);
